@@ -41,6 +41,7 @@ Heikki Vatiainen <hessu@cs.tut.fi>
 Heiko Schroeder <heiko@pool.informatik.rwth-aachen.de>
 Henrik Nordstrom <hno@marasystems.com>
 Herbert Nachtnebel <nachtneb@iaee.tuwien.ac.at>
+Hidetoshi Nishimaki <nishimaki@mxs.nes.nec.co.jp>
 Hisazumi Kenji <nel@soraneko.com>
 HORIKAWA Kazunori <kaz-hori@tkd.att.ne.jp>
 Ilguiz Latypov <ilatypov@superbt.com>
