@@ -1,5 +1,11 @@
 2002-10-06  Yoshinori K. Okuji  <okuji@enbug.org>
 
+	* stage2/asm.S (gateA20): Output a dummy command (0xff), as a
+	workaround for USB keyboard hanging problem. Suggested by
+	Hidetoshi Nishimaki <nishimaki@mxs.nes.nec.co.jp>.
+
+2002-10-06  Yoshinori K. Okuji  <okuji@enbug.org>
+
 	* configure.in (falign_loop_flag): New variable. Set to if GCC
 	supports `-falign-*'. If true, use `-falign-jumps',
 	`-falign-loops' and `-falign-functions' instead of
